--- a/product.css
+++ b/product.css
@@ -343,7 +343,7 @@ form {
         font-weight: bold;
         cursor: pointer;
         margin-top: 10px;
-        margin-bottom: 40px;
+        margin-bottom: 5%;
     }
 
     /* Mobile UX improvements */
