--- a/product.css
+++ b/product.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 * {
-    background: white;
+    background: black;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -68,7 +68,7 @@ html, body {
 .next-btn { right: 10px; }
 
 .prev-btn:hover, .next-btn:hover {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(255, 255, 255, 0.8);
 }
 
 .product-details {
