--- a/product.css
+++ b/product.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 * {
-    background: #212529;
+    background: #000814;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@ html, body {
     align-items: center;
     max-width: 1200px;
     margin: auto;
-    background: #212529;
+    background: #000814;
     padding: 20px;
     border-radius: 8px;
     height: 100vh; /* Ensures it fills the full viewport height */
@@ -106,7 +106,7 @@ form {
     cursor: pointer;
     font-weight: bold;
     color: #ffffff;
-    background: rgba(0, 0, 0, 0.5);
+    background: 000814;
 }
 
 .add-another .plus-icon {
