--- a/product.css
+++ b/product.css
@@ -272,17 +272,17 @@ h1 {
     .selection-row {
         flex-direction: column;
         align-items: flex-start;
-        margin-bottom: 18px; /* Space between selection rows */
+        margin-bottom: 13px; /* Space between selection rows */
     }
     
     .selection-row label {
         font-weight: normal;
+        margin-bottom: 5px;
     }
 
     .selection-row select,
     .selection-row input[type="number"] {
         width: 100%;
-        margin-left: 10px; /* Space between label and select/input */
         font-size: 15px; /* Same font size as form elements */
     }
 
