--- a/product.css
+++ b/product.css
@@ -380,4 +380,8 @@ ul li {
             cursor: pointer;
             margin-top: 10px;
         }
+        ul li {
+            margin-right: 10px; /* adds space to the right (start in RTL) */
+        }
+
     }
